<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".scene.auth.sign_up.SignUpFragment">

    <TextView
        android:id="@+id/screenTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_1"
        android:layout_marginTop="@dimen/spacing_1"
        android:layout_marginEnd="@dimen/spacing_1"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/text.size.x_large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_2"
        android:layout_marginTop="@dimen/spacing_2"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textSize="@dimen/text.size.medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/facebookBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_2"
            android:layout_marginEnd="@dimen/spacing_2"
            android:background="@drawable/rounded_button_with_background"
            android:text="@string/continue_with_facebook"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/googleBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_2"
            android:layout_marginTop="@dimen/spacing_2"
            android:layout_marginEnd="@dimen/spacing_2"
            android:background="@drawable/rounded_button_with_background"
            android:text="@string/continue_with_google"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_3"
            android:text="@string/or"
            android:textAlignment="center"
            android:textSize="@dimen/text.size.medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_3"
            android:text="@string/login_with_email"
            android:textAlignment="center"
            android:textSize="@dimen/text.size.medium" />

        <EditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_2"
            android:layout_marginTop="@dimen/spacing_2"
            android:layout_marginEnd="@dimen/spacing_2"
            android:background="@drawable/rounded_button_without_background"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="@dimen/field_padding"
            android:textColorHint="@color/black" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_2"
            android:layout_marginTop="@dimen/spacing_2"
            android:layout_marginEnd="@dimen/spacing_2"
            android:layout_marginBottom="@dimen/spacing_2"
            android:background="@drawable/rounded_button_without_background"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingStart="@dimen/spacing_1"
                android:textColorHint="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_2"
            android:layout_marginEnd="@dimen/spacing_2"
            android:background="@drawable/rounded_button_without_background"
            android:text="@string/login"
            android:textSize="@dimen/text.size.large"
            android:textStyle="normal" />

        <Button
            android:id="@+id/forgotPassBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_2"
            android:layout_marginTop="@dimen/spacing_2"
            android:layout_marginEnd="@dimen/spacing_2"
            android:layout_marginBottom="@dimen/spacing_4"
            android:background="@android:color/transparent"
            android:text="@string/forgot_password"
            android:textAllCaps="false" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>