<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".scene.auth.auth_type.AuthTypeFragment">

    <TextView
        android:id="@+id/skipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:padding="@dimen/spacing_1"
        android:text="@string/skip"
        android:textColor="@color/white"
        android:textSize="@dimen/text.size.medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/skip_screen_logo"
        app:layout_constraintBottom_toTopOf="@+id/bottomContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/bottomContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_2"
            android:text="@string/skip_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text.size.xx_large"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_2"
            android:text="@string/skip_description"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="@dimen/text.size.large" />

        <Button
            android:id="@+id/newUserBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_4"
            android:layout_marginEnd="@dimen/spacing_4"
            android:background="@drawable/rounded_button_with_background"
            android:text="@string/new_user"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_4"
            android:layout_marginTop="@dimen/spacing_2"
            android:layout_marginEnd="@dimen/spacing_4"
            android:layout_marginBottom="@dimen/spacing_4"
            android:background="@drawable/rounded_button_without_background"
            android:text="@string/sign_in"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>